The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.04 [20090923] [svn: r107]
  - add SAT ATA Power condition mode page (sat2r06)
  - sync with spc4r18
  - add Power condition, update extended inquiry VPD pages
  - update Power condition mode page
  - rename SAS-2 phy mode page to Enhanced phy control (SAS)
  - sdparm.spec: correction to configure call

ChangeLog for sdparm-1.03 [20080623] [svn: r96]
  - allow more than one DEVICE argument on command line
  - add speed[=val] and profile commands for MMC
  - update Extended Inquiry VPD page to spc4r15
  - 'di' VPD page: decode "NAA Locally assigned"
  - SAS protocol-specific port mpage (subpage=0)
    - add CAWT (sas2r13) and RTOL (sas2r14)
  - change 'long long' to int64_t to stress only require
    64 bit integers (similar change to uint64_t)
  - cleanup to use sg_cmds_mmc and PDT_* defines
  - define SDPARM_MINGW when configure detects it
  - sync with debian unstable files: debian/rules+changelog

ChangeLog for sdparm-1.02 [20071008] [svn: r59]
  - support mode page descriptors with
    <acronym_name>[.<descriptor_num] syntax
    - "2_<acronym>" type entries replaced by new syntax
    - support medium partition mpage (SSC) with partitions
      as descriptors
  - append relative target port identifier to SAS target
    port address with '-iq' option
  - add solaris port
  - place vendor specific data in sdparm_data_vendor.c
  - in the absence of an explicit transport or vendor,
    and if no match on mode page name or field, then try
    SAS transport
  - add block device characteristics VPD page
  - add protocol-specific logical unit information VPD
    page (SAS)
  - use new sg_lib sg_get_num_nomult()
  - place source in subversion repository
    - use svn:externals property to point to sg3_utils'
      include/ and lib/ directories