@@ -40,7 +40,7 @@
 #include "sg_cmds_basic.h"
 
 /* sdparm_vpd.c : does mainly VPD page processing associated with the
- * INQUIRY SCSI command. Roughly in sync with spc4r15.
+ * INQUIRY SCSI command. Roughly in sync with spc4r18.
  */
 
 /* Prints outs an abridged set of device identification designators
@@ -210,7 +210,7 @@ decode_dev_ids(const char * print_if_found, unsigned char * buff, int len,
                int quiet)
 {
     int m, p_id, c_set, piv, assoc, desig_type, i_len;
-    int ci_off, c_id, d_id, naa, vsi, printed, off, u;
+    int ci_off, c_id, d_id, naa, vsi, printed, off, u, k;
     uint64_t vsei;
     uint64_t id_ext;
     const unsigned char * ucp;
@@ -251,7 +251,17 @@ decode_dev_ids(const char * print_if_found, unsigned char * buff, int len,
         /* printf("    associated with the %s\n", sdparm_assoc_arr[assoc]); */
         switch (desig_type) {
         case 0: /* vendor specific */
-            dStrHex((const char *)ip, i_len, 0);
+            k = 0;
+            if ((1 == c_set) || (2 == c_set)) { /* ASCII or UTF-8 */
+                for (k = 0; (k < i_len) && isprint(ip[k]); ++k)
+                    ;
+                if (k >= i_len)
+                    k = 1;
+            }
+            if (k)
+                printf("      vendor specific: %.*s\n", i_len, ip);
+            else
+                dStrHex((const char *)ip, i_len, 0);
             break;
         case 1: /* T10 vendor identification */
             printf("      vendor id: %.8s\n", ip);
@@ -823,6 +833,14 @@ decode_block_limits_vpd(unsigned char * buff, int len)
             (buff[18] << 8) | buff[19];
         printf("  Maximum prefetch, xdread, xdwrite transfer length: %u "
                "blocks\n", u);
+    }
+    if (len > 27) {     /* added in sbc3r18 */
+        u = ((unsigned int)buff[20] << 24) | (buff[21] << 16) |
+            (buff[22] << 8) | buff[23];
+        printf("  Maximum unmap LBA count: %u\n", u);
+        u = ((unsigned int)buff[24] << 24) | (buff[25] << 16) |
+            (buff[26] << 8) | buff[27];
+        printf("  Maximum unmap block descriptor count: %u\n", u);
     }
     return 0;
 }
